corrected html layout

--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Jeopardy</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
 <body>
-    <table>
+    <table id="number-buttons">
         <tr>
-            <td class='btn btn-success btn-lg'>10</td>
+            <td><button class='btn btn-success btn-lg'>10</button></td>
             <td class='btn btn-success btn-lg'>10</td>
             <td class='btn btn-success btn-lg'>10</td>
             <td class='btn btn-success btn-lg'>10</td>
