added tags to html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 
 <body>
 
+    <h1>Jeopardy</h1>
+    <!--make link for instructions-->
+    <h2 id="categoryName">Colors</h2>
+
 
 
     <div id="playerScore">Score: 0
