this is a safe space. about to test some stuff

--- a/index.html
+++ b/index.html
@@ -18,21 +18,22 @@
 
 
 <body>
+    <header>
+        <h1>Jeopardy</h1>
+    </header>
 
-    <h1>Jeopardy</h1>
     <!--make link for instructions-->
-    <h2 id="categoryName">Colors</h2>
 
-
-
-    <div id="playerScore">Score: 0
+    <div id="game-container">
+        <div id="categoryName">David Bowie</div>
+        <div>
+            <h2 id="playerScore">Score: 0</h2>
+        </div>
     </div>
 
-    <!--<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>-->
+
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="script.js"></script>
-
-
-
 </body>
 
 </html>
