--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
     <!--make link for instructions-->
 
     <div id="game-container">
-        <div id="categoryName">David Bowie</div>
-        <div>
-            <h2 id="playerScore">Score: 0</h2>
+        <div class="row">
+
+            <div class="l6">
+                <h2 id="playerScore">Score: 0</h2>
+            </div>
+            <div class="l6" id="categoryName">David Bowie</div>
         </div>
     </div>
 
